--- a/project/style/varble && mixsin.sass
+++ b/project/style/varble && mixsin.sass
@@ -5,13 +5,32 @@ $Grayish-Blue: hsl(233, 8%, 62%)
 $Light-Grayish-Blue: hsl(220, 16%, 96%)
 $Very-Light-Gray: hsl(0, 0%, 98%)
 $White: hsl(0, 0%, 100%)    
-@mixin for-phone-only
-  @media (max-width : 1200px ) 
-     @content 
+@mixin for-size($size) 
+    @if $size == phone-only 
+       @media (max-width: 375px) 
+        @content 
+    @else if $size == mobile-small 
+       @media (max-width: 480px) 
+        @content 
+    @else if $size == max-mobile 
+       @media (max-width: 767px) 
+        @content 
+    @else if $size == tablet-landscape-up 
+       @media (max-width: 991px) 
+        @content 
+    @else if $size == tablet-landscape-up 
+       @media (max-width: 1024px) 
+        @content 
+    @else if $size == desktop-up 
+       @media (max-width: 1200px)  
+        @content
+    @else if $size == desktop
+       @media (min-width: 1200px)  
+        @content
+    @else if $size == big-desktop-up 
+       @media (min-width: 1600px) 
+        @content 
 
-@mixin for-desktop-up 
-  @media (min-width :  1200px ) 
-     @content
 @mixin button($color,$color2)
   
   background: linear-gradient(90deg, $color,$color2 100%)
