--- a/style/style.sass
+++ b/style/style.sass
@@ -235,6 +235,10 @@ nav
         // margin: 0 auto
         @include for-size(max-mobile)
             justify-content: center
+        svg
+          @include for-size(max-mobile)
+            margin: auto
+
 
         div
             margin: 0
